--- a/main.css
+++ b/main.css
@@ -123,7 +123,7 @@ footer .footer-wrapper {
   width: 100%;
   max-width: 1300px;
   margin: 0 auto;
-  padding: 40px 0;
+  padding: 40px;
 }
 
 footer div{
@@ -247,7 +247,7 @@ color: white;
   background: black;
   font-size: 12px;
   text-align: right;
-  padding: 0px 62px 35px 0px;
+  padding: 0px 73px 35px 0px;
   margin: 0 auto;
   
   }
